redis实现关注共同好友

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>commons</module>
         <module>ms-oauth2-server</module>
         <module>ms-seckill</module>
+        <module>ms-follow</module>
     </modules>
     <groupId>org.example</groupId>
     <artifactId>food-social-contact-parent</artifactId>
