--- a/ms-gateway/src/main/resources/application.yml
+++ b/ms-gateway/src/main/resources/application.yml
@@ -39,6 +39,12 @@ spring:
           filters:
             - StripPrefix=1
 
+        - id: ms-feeds
+          uri: lb://ms-feeds
+          predicates:
+            - Path=/feeds/**
+          filters:
+            - StripPrefix=1
 
 secure:
   ignore:
