--- a/ms-feeds/src/main/resources/application.yml
+++ b/ms-feeds/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8084 # 端口
+  port: 8085 # 端口
 
 spring:
   application:
-    name: ms-follow # 应用名
+    name: ms-feeds # 应用名
   # 数据库
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -20,7 +20,7 @@ spring:
     database: 2
   # Swagger
   swagger:
-    base-package: com.fayayo.follow
+    base-package: com.fayayo.feeds
     title: 美食社交食客API接口文档
 
 # 配置 Eureka Server 注册中心
@@ -36,7 +36,7 @@ service:
   name:
     ms-oauth-server: http://ms-oauth2-server/
     ms-diners-server: http://ms-diners/
-    ms-feeds-server: http://ms-feeds/
+    ms-follow-server: http://ms-follow/
 
 mybatis:
   configuration:
