redis实现积分排行功能

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ms-seckill</module>
         <module>ms-follow</module>
         <module>ms-feeds</module>
+        <module>ms-points</module>
     </modules>
     <groupId>org.example</groupId>
     <artifactId>food-social-contact-parent</artifactId>
