--- a/ms-points/src/main/resources/application.yml
+++ b/ms-points/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8081
+  port: 8086 # 端口
 
 spring:
   application:
-    name: ms-diners
+    name: ms-points # 应用名
   # 数据库
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -17,28 +17,13 @@ spring:
     host: 114.67.67.44
     timeout: 3000 # 连接超时时间
     password: root@123456 # Redis 服务器密码
-    database: 1
-  # swagger
+    database: 3
+  # Swagger
   swagger:
-    base-package: com.imooc.diners
+    base-package: com.fayayo.feeds
     title: 美食社交食客API接口文档
 
-
-# Oauth2 客户端信息
-oauth2:
-  client:
-    client-id: appId
-    secret: 123456
-    grant_type: password
-    scope: api
-
-# oauth2 服务地址
-service:
-  name:
-    ms-oauth-server: http://ms-oauth2-server/
-    ms-points-server: http://ms-points-server/
-
-#eureka 注册中心
+# 配置 Eureka Server 注册中心
 eureka:
   instance:
     prefer-ip-address: true
@@ -47,7 +32,12 @@ eureka:
     service-url:
       defaultZone: http://localhost:8080/eureka/
 
-# Mybatis
+service:
+  name:
+    ms-oauth-server: http://ms-oauth2-server/
+    ms-diners-server: http://ms-diners/
+    ms-follow-server: http://ms-follow/
+
 mybatis:
   configuration:
     map-underscore-to-camel-case: true # 开启驼峰映射
